# vibe-todo

./: .dockerignore  .gitignore  .windsurfrules  DEPLOYMENT.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pre-commit-hook.sh  pyproject.toml  requirements.txt  run_all_tests.py  setup_hooks.py
.github/workflows/: python-ci.yml
reports/: .keep  generate_report.py
tests/: test_benchmark.py  test_evolutionary.py  test_hypothesis.py  test_regression.py  test_unit.py
todo/: controller.py  models.py  validation.py  views.py
