[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vibe-todo"
version = "1.0.0"
description = "A high-performance todo application"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Vibe Team"}
]
dynamic = ["version"]
dependencies = [
    "pytest>=7.0.0",
    "hypothesis>=6.0.0",
    "deap>=1.3.0",
]

[tool.ruff]
# Target Python version
target-version = "py311"
line-length = 88

[tool.ruff.lint]
# Enable Pyflakes, PyCodeStyle, McCabe, isort, pep8-naming, etc.
select = ["E", "F", "I", "N", "PL", "UP", "S", "C90", "B", "A"]
ignore = []

# Allow autofix for all enabled rules (when `--fix`) is provided
fixable = ["A", "B", "C", "D", "E", "F", "I"]
unfixable = []

# Constants specifically for the todo application
[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false

[tool.ruff.lint.isort]
known-first-party = ["todo"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]  # Allow assert in tests

[tool.black]
line-length = 88
target-version = ["py311"]
include = '\.pyi?$'

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
